--- a/gmdb/templates/home.html
+++ b/gmdb/templates/home.html
@@ -66,22 +66,43 @@
         object-fit: cover; 
         object-position: center; 
     }
+
+    body {
+        background-color: #101010;
+        color: white;
+        width: 100%;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-size: cover;
+    }
+
+    h1 small {
+        font-size: 50%
+    }
+
+    .hero {
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(16, 16, 16, 0.9) 70%, #101010 95%), url('/static/images/bg-image.jpg');
+        background-color: rgba(0, 0, 0, 0.6); 
+        width: 100%; 
+        height: 100vh; 
+        background-repeat: no-repeat; 
+        background-size: cover;
+    }
 </style>
 {% endblock meta %}
 
 {% block content %}
-<body style="background-color: #101010; width: 100%; height: 100%; background-repeat: no-repeat; background-size: cover; font-family: 'Helvetica Neue';">
-    <div class="films-bg" 
-        style="background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(16, 16, 16, 0.9) 70%, #101010 95%), url('/static/images/bg-image.jpg');
-           background-color: rgba(0, 0, 0, 0.6); 
-           width: 100%; 
-           height: 100vh; 
-           background-repeat: no-repeat; 
-           background-size: cover;">
-         <div class="h-100 d-flex flex-column align-items-center justify-content-center">
-            <h1 class="mb-4" style="font-weight: bold; color: whitesmoke;">GMDb: Graph Movie Database</h1>
-            <div class="input-group rounded w-50">
-                <form class="d-flex w-100" action="{% url 'gmdb:search_movies' %}" method="GET">
+<body>
+    <div class="hero">
+         <div class="h-100 d-flex flex-column align-items-center justify-content-center container">
+            <h1 class="mb-4 font-weight-bold">
+                <i class="fa-solid fa-hexagon-nodes"></i>
+                <i class="fa-solid fa-film"></i> 
+                GMDb
+                <small>Graph Movie Database</small>
+            </h1>
+            <div class="input-group rounded">
+                <form class="d-flex w-100 mr-2" action="{% url 'gmdb:search_movies' %}" method="GET">
                     <input type="search" class="form-control rounded-pill p-3" placeholder="What movie are you looking for?" aria-label="What movie are you looking for?" aria-describedby="search-addon" name="q"/>
                     <button class="input-group-text border-0 rounded-pill" id="search-addon" type="submit">
                         <i class="fas fa-search"></i>
@@ -94,7 +115,7 @@
     {% for section in sections %}
 
         <div class="container movie-recommendation mt-4">
-            <h3 style="color: whitesmoke;">{{ section.title }}</h3>
+            <h3>{{ section.title }}</h3>
             <div class="scrolling-wrapper-container">
                 <button class="scroll-arrow scroll-left" onclick="scrollMovies(this, 'left')">
                     <i class="fas fa-chevron-left"></i>
@@ -129,5 +150,8 @@
         }
     }
     </script>
+
+{% include 'footer.html' %}
+
 </body>
 {% endblock content %}
