--- a/gmdb/templates/search.html
+++ b/gmdb/templates/search.html
@@ -71,9 +71,11 @@
         background-color: #101010;
         color: white;
         width: 100%;
-        height: 100%;
+        min-height: 100vh;
         background-repeat: no-repeat;
         background-size: cover;
+        display: flex;
+        flex-direction: column;
     }
 
     h1 small {
@@ -81,12 +83,16 @@
     }
 
     .hero {
-        background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(16, 16, 16, 0.9) 70%, #101010 95%), url('/static/images/bg-image.jpg');
+        background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(16, 16, 16, 0.9) 85%, #101010 95%), url('/static/images/bg-image.jpg');
         background-color: rgba(0, 0, 0, 0.6); 
         width: 100%; 
-        height: 100vh; 
+        height: 15vh; 
         background-repeat: no-repeat; 
         background-size: cover;
+    }
+
+    .movie-recommendation {
+        flex: 1;
     }
 </style>
 {% endblock meta %}
@@ -94,15 +100,14 @@
 {% block content %}
 <body>
     <div class="hero">
-         <div class="h-100 d-flex flex-column align-items-center justify-content-center container">
-            <h1 class="mb-4 font-weight-bold">
+         <div class="h-100 d-flex flex-row align-items-center justify-content-center container">
+            <h1 class="font-weight-bold text-nowrap mx-2">
                 <i class="fa-solid fa-hexagon-nodes"></i>
                 <i class="fa-solid fa-film"></i> 
                 GMDb
-                <small>Graph Movie Database</small>
             </h1>
-            <div class="input-group rounded">
-                <form class="d-flex w-100 mr-2" action="{% url 'gmdb:search_movies' %}" method="GET">
+            <div class="input-group rounded mx-2">
+                <form class="d-flex w-100" action="{% url 'gmdb:search_movies' %}" method="GET">
                     <input type="search" class="form-control rounded-pill p-3" placeholder="What movie are you looking for?" value="{{search_query}}" aria-label="What movie are you looking for?" aria-describedby="search-addon" name="q"/>
                     <button class="input-group-text border-0 rounded-pill" id="search-addon" type="submit">
                         <i class="fas fa-search"></i>
@@ -113,7 +118,7 @@
     </div>
 
     <div class="container movie-recommendation mt-4">
-        <h3>
+        <h3 class="mb-4">
             {% if results %}
                 {{ results|length }} results found for "{{search_query}}".
             {% else %}
