--- a/gmdb/templates/search.html
+++ b/gmdb/templates/search.html
@@ -115,14 +115,79 @@
     {% include 'header.html' %}
 
     <div class="container movie-recommendation mt-4">
-        <h3 class="mb-4">
-            {% if results %}
-                {{ results|length }} results found for "{{search_query}}".
-            {% else %}
-                No results found for "{{search_query}}", try another search.
-            {% endif %}
-        </h3>
+        <div class="mb-4">
+            <h3>
+                {% if results %}
+                    {{ results|length }} results found for "{{search_query}}".
+                {% else %}
+                    No results found for "{{search_query}}", try another search.
+                {% endif %}
+            </h3>
+            <a href="#" data-toggle="modal" data-target="#advanced-search">Advanced Search...</a>
+        </div>
         {% if results %}
+        
+        
+        <div class="modal fade" id="advanced-search" tabindex="-1" role="dialog" aria-labelledby="advanced-search-label" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="advanced-search-label">Advanced Search</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <form action="{% url 'gmdb:search_movies' %}">
+                    <div class="modal-body">
+                        <div class="form-group mb-4">
+                            <h6 for="advancedQueryInput">Search Query</h6>
+                            <input type="search" class="form-control" name="q" id="advancedQueryInput" placeholder="Insert query here..." value="{{search_query}}">
+                        </div>
+                        <div class="form-group mb-4">
+                            <h6>Search Type</h6>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="searchBy" id="searchBy1" value="title" checked>
+                                <label class="form-check-label" for="searchBy1">
+                                    Title
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="searchBy" id="searchBy2" value="extended">
+                                <label class="form-check-label" for="searchBy2">
+                                    Extended
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <h6>Sort By</h6>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="sortBy" id="sortBy1" value="title" checked>
+                                <label class="form-check-label" for="sortBy1">
+                                    Title
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="sortBy" id="sortBy2" value="rating">
+                                <label class="form-check-label" for="sortBy2">
+                                    Highest Rating
+                                </label>
+                            </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="sortBy" id="sortBy3" value="gross">
+                                <label class="form-check-label" for="sortBy3">
+                                    Highest Grossing
+                                </label>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                    <button type="submit" class="btn btn-secondary">Search</button>
+                    </div>
+                </form>
+            </div>
+            </div>
+        </div>
+        
         <div class="grid-wrapper-container">
             <div class="grid-wrapper">
                 {% for item in results %}
