--- a/gmdb/templates/search.html
+++ b/gmdb/templates/search.html
@@ -126,7 +126,7 @@
         <div class="grid-wrapper-container">
             <div class="grid-wrapper">
                 {% for item in results %}
-                <div class="item card" onclick="showInfo('{{ item.movieName|escapejs }}', '{{ item.poster|escapejs }}', '{{ item.overview|escapejs }}', '{{ item.directorLabel|escapejs }}', '{{ item.directorUrl|escapejs }}', '{{ item.imdbRating|escapejs }}', '{{ item.runtime|escapejs }}', '{{ item.releasedYear|escapejs }}')">
+                <div class="item card" onclick="showInfo('{{ item.id|escapejs }}', '{{ item.movieName|escapejs }}', '{{ item.poster|escapejs }}', '{{ item.overview|escapejs }}', '{{ item.directorLabel|escapejs }}', '{{ item.directorUrl|escapejs }}', '{{ item.imdbRating|escapejs }}', '{{ item.runtime|escapejs }}', '{{ item.releasedYear|escapejs }}')">
                     <img class="card-img-top rounded" src="{{ item.poster }}" alt="{{ item.movieName }}"/>
                 </div>
                 {% endfor %}
@@ -148,7 +148,7 @@
     </div>
 
     <script>
-        function showInfo(title, poster, overview, directorLabel, directorUrl, imdbRating, runtime, releasedYear) {
+        function showInfo(id, title, poster, overview, directorLabel, directorUrl, imdbRating, runtime, releasedYear) {
             document.getElementById('movie-title').textContent = title;
             document.getElementById('sidebar-poster').src = poster || 'default_poster.jpg'; // Fallback for missing poster
             document.getElementById('movie-overview').textContent = overview;
@@ -156,8 +156,16 @@
                 <strong>Director:</strong> <a href="${directorUrl}">${directorLabel || 'Unknown'}</a><br>
                 <strong>IMDb Rating:</strong> ${imdbRating || 'N/A'}<br>
                 <strong>Runtime:</strong> ${runtime}<br>
-                <strong>Release Year:</strong> ${releasedYear || 'Unknown'}
+                <strong>Release Year:</strong> ${releasedYear || 'Unknown'}<br>
             `;
+            const detailPageUrl = "{% url 'gmdb:movie_detail' 'movie_id_placeholder' %}".replace('movie_id_placeholder', id);
+
+            const viewDetailsButton = document.createElement('a');
+            viewDetailsButton.href = detailPageUrl; 
+            viewDetailsButton.classList.add('btn', 'btn-light', 'mt-4', 'text-dark', 'w-100');
+            viewDetailsButton.textContent = 'View Movie Detail';
+
+            document.getElementById('movie-info').appendChild(viewDetailsButton);
 
             document.getElementById('info-box').classList.add('active');
         }
