--- a/gmdb/templates/search.html
+++ b/gmdb/templates/search.html
@@ -117,7 +117,9 @@
     <div class="container movie-recommendation mt-4">
         <div class="mb-4">
             <h3>
-                {% if results %}
+                {% if not search_query %}
+                    No results found, Enter a search query.
+                {% elif results %}
                     {{ results|length }} results found for "{{search_query}}".
                 {% else %}
                     No results found for "{{search_query}}", try another search.
@@ -126,8 +128,6 @@
             <a href="#" data-toggle="modal" data-target="#advanced-search">Advanced Search...</a>
         </div>
         {% if results %}
-        
-        
         <div class="modal fade" id="advanced-search" tabindex="-1" role="dialog" aria-labelledby="advanced-search-label" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
@@ -187,7 +187,6 @@
             </div>
             </div>
         </div>
-        
         <div class="grid-wrapper-container">
             <div class="grid-wrapper">
                 {% for item in results %}
